# DA_PROJ2

./: CMakeLists.txt  ILP.h  brute_force.h  dynamic_prog.h  greedy.h  ilp.h  input.h  knapsack_solver.py  main.cpp  main1.cpp  test_log.txt
docs/: Doxyfile
docs/html/: brute__force_8h.html  brute__force_8h.js  brute__force_8h_source.html  doxygen_crawl.html  dynamic__prog_8h.html  dynamic__prog_8h.js  dynamic__prog_8h_source.html  files.html  files_dup.js  globals.html  globals_func.html  greedy_8h.html  greedy_8h.js  greedy_8h_source.html  ilp_8h.html  ilp_8h.js  ilp_8h_source.html  index.html  input_8h.html  input_8h.js  input_8h_source.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_3.js  searchdata.js
docs/latex/: brute__force_8h.tex  brute__force_8h_source.tex  dynamic__prog_8h.tex  dynamic__prog_8h_source.tex  files.tex  greedy_8h.tex  greedy_8h_source.tex  ilp_8h.tex  ilp_8h_source.tex  input_8h.tex  input_8h_source.tex  main_8cpp.tex  refman.tex
include/: Color.hpp  Image.hpp
include/Command/: Add.hpp  Chain.hpp  Crop.hpp  Fill.hpp  H_mirror.hpp  Invert.hpp  Move.hpp  Replace.hpp  Resize.hpp  Rotate_left.hpp  Rotate_right.hpp  Scaleup.hpp  Slide.hpp  To_gray_scale.hpp  V_mirror.hpp
src/: Color.cpp  Image.cpp  ScrimParser.cpp
src/Command/: Add.cpp  Chain.cpp  Crop.cpp  Fill.cpp  H_mirror.cpp  Invert.cpp  Move.cpp  Replace.cpp  Resize.cpp  Rotate_left.cpp  Rotate_right.cpp  Scaleup.cpp  Slide.cpp  To_gray_scale.cpp  V_mirror.cpp
